remove code to clean up db
